--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,7 +37,7 @@ button {
   color: white;
 }
 
-.Left button[data-side="Left"], .Right button[data-side="Right"] {
+.left button[data-side="Left"], .right button[data-side="Right"], .Left button[data-side="Left"], .Right button[data-side="Right"] {
   background: #7f8c8d;
 }
 
